--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pwa-text-editor",
+  "name": "JATE",
   "version": "1.0.0",
-  "description": "A text editor that runs in the browser that meets PWA criteria",
+  "description": "",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
@@ -11,11 +11,10 @@
     "client": "cd client && npm start"
   },
   "dependencies": {
-    "express": "^4.18.1",
-    "idb": "^7.0.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "concurrently": "^7.3.0",
-    "nodemon": "^2.0.19"
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
   }
 }
